<resources>
    <string name="app_name">Pinti</string>

    <string name="MainActivityBanner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="BarcodeScanActivityBanner">ca-app-pub-3940256099942544/6300978111</string>

    <string name="ProductDetailActivityBanner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ProductDetailActivityInterstitial">ca-app-pub-3940256099942544/103317371278111</string>

    <string name="ProductByCategoryActivityBanner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ProductByShopActivityBanner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="SearchActivityBanner">ca-app-pub-3940256099942544/6300978111</string>

    <string name="home_page">Anasayfa</string>
    <string name="categories_page">Kategoriler</string>
    <string name="add_product_page">Ürün Ekle</string>
    <string name="profile_page">Profil</string>

    <string name="categories">Kategoriler</string>
    <string name="markets">Marketler</string>

    <string name="category">Kategori</string>
    <string name="market">Market</string>

    <string name="price">Fiyat</string>
    <string name="price_symbol">₺</string>

    <string name="email">E-mail</string>
    <string name="password">Şifre</string>
    <string name="login">Oturum Aç</string>
    <string name="accont_question">Hesabınız yok mu?</string>
    <string name="register">Kaydol</string>
    <string name="password_again">Şifre Tekrar</string>
    <string name="full_name">Ad Soyad</string>
    <string name="login_question">Zaten bir hesabınız var mı?</string>

    <string name="price_tag_photo">Etiket fotoğrafı</string>
    <string name="field_cant_be_empty">alanı boş olamaz</string>
    <string name="did_not_match_passwords">Şifreler aynı değil</string>
    <string name="wrong_email_type">Yanlış e-mail tipi</string>
    <string name="short_password">Şifre en az 6 karakterli olmalı</string>
    <string name="long_password">Şifre en fazla 18 karakterli olmalı</string>
    <string name="unselected_spinner">seçmelisiniz</string>

    <string name="login_success">Oturum açıldı</string>
    <string name="login_failed">Oturum açılamadı</string>
    <string name="register_success">Hesap oluşturuldu</string>
    <string name="register_failed">Hesap oluşturulamadı</string>
    <string name="scan_barcode">Barkod Tara</string>
    <string name="scan_barcode_description">Fiyat bilgisi eklemek veya yeni bir ürün oluşturmak için lütfen barkodu tarayınız.</string>
    <string name="product_name">Ürün Adı</string>
    <string name="save">Kaydet</string>
    <string name="brand">Marka</string>
    <string name="location">Konum</string>

    <string name="add_photo">Fotoğraf Ekle</string>
    <string name="photo_added">Fotoğraf Eklendi</string>

    <string name="scan_pricetag">Etiket Tara</string>
    <string name="pricetag_scanned">Etiket Tarandı</string>
    <string name="pricetag_detecting">Fiyat Algılanıyor</string>

    <string name="product_photo">Ürün fotoğrafı</string>
    <string name="search">Search</string>
    <string name="product_not_found">Ürün bulunamadı</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="brand_and_category">Marka ve Kategori</string>
    <string name="example_5_price">5 Fiyat</string>
    <string name="date">Tarih</string>
    <string name="example_price">5,35₺</string>
    <string name="shop_name">Market Adı</string>
    <string name="logout">Çıkış Yap</string>
</resources>