<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        android:layout_marginHorizontal="@dimen/grid_space"
        android:layout_marginBottom="@dimen/grid_space">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:paddingHorizontal="10dp">

            <RelativeLayout
                android:id="@+id/relativeLayoutLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/grid_space"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/relativeLayoutRight"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textViewMarketName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/market"
                    android:textStyle="bold"
                    android:textSize="30sp"/>

                <TextView
                    android:id="@+id/textViewLocationTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:maxWidth="200dp"
                    android:layout_marginTop="4dp"
                    android:textSize="14sp"
                    android:layout_below="@id/textViewMarketName"/>

                <TextView
                    android:id="@+id/textViewRecordDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textStyle="italic"
                    android:layout_marginTop="4dp"
                    android:textSize="12sp"
                    android:layout_below="@id/textViewLocationTitle"/>

                <TextView
                    android:id="@+id/textViewRecordOwner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/full_name"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:layout_toRightOf="@+id/textViewRecordDate"
                    android:layout_alignBottom="@+id/textViewRecordDate"/>
            </RelativeLayout>




            <RelativeLayout
                android:id="@+id/relativeLayoutRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <TextView
                    android:id="@+id/textViewPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/example_price"
                    android:textSize="36sp"
                    android:textStyle="bold"
                     />

                <ImageView
                    android:id="@+id/imageViewLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="35dp"
                    android:adjustViewBounds="true"
                    android:layout_below="@+id/textViewPrice"
                    android:layout_alignEnd="@+id/textViewPrice"
                    android:layout_marginEnd="20dp"
                    app:srcCompat="@drawable/ic_location"
                    tools:ignore="VectorDrawableCompat" />

            </RelativeLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>