<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <include
            layout="@layout/main_toolbar"
            android:visibility="visible" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/toolbar_layout"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginVertical="16dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputProductName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextProductName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="8dp"
                        android:hint="@string/product_name"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputProductBrand"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextProductBrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="8dp"
                        android:hint="@string/brand"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>



                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">
                </Spinner>






                <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLocationTitle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/imageViewLocation"
                    android:layout_marginStart="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextLocationTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="8dp"
                        android:hint="@string/location"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/imageViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="24dp"
                android:layout_alignBottom="@+id/textInputLocationTitle"
                android:layout_marginBottom="2dp"
                app:srcCompat="@drawable/ic_location"
                tools:ignore="VectorDrawableCompat" />
        </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputProductPrice"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextProductPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person"
                        android:drawablePadding="8dp"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>



                <Button
                    android:id="@+id/buttonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:paddingVertical="8dp"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textSize="18sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewAccountQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/login_question"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textViewLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>