<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.product_detail.ProductDetailActivity">

    <RelativeLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/includeToolbar"
            layout="@layout/main_toolbar"
            android:visibility="visible"/>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewShopProductDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_space"
                android:layout_marginHorizontal="@dimen/grid_space"
                app:cardCornerRadius="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp">

                <ImageView
                    android:id="@+id/imageViewProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="300dp"
                    android:layout_marginHorizontal="@dimen/grid_space"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/im_default" />

                <TextView
                    android:id="@+id/textViewProductName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/product_name"
                    android:gravity="center_horizontal"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageViewProduct" />

                <TextView
                    android:id="@+id/textViewProductBrandAndCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/brand_and_category"
                    android:gravity="center_horizontal"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewProductName" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewRecords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardViewShopProductDetail"
                android:paddingTop="@dimen/grid_space"
                android:paddingBottom="@dimen/ad_banner_space"
                android:clipToPadding="false"
                tools:listitem="@layout/item_shop_card">
            </androidx.recyclerview.widget.RecyclerView>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ProductDetailActivityBanner">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>